[package]
name = "mysql_all"
version = "0.1.0"
edition = "2021"
authors = ["Parthiv T"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
mysql="*"
# egui
egui = "0.21"
eframe = { version = "0.21", features = ["persistence"] }
egui_extras = { version ="0.21", features = ["datepicker"]}
chrono = "0.4"